# projecteWeb

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
ProjecteWeb/: asgi.py  settings.py  urls.py  wsgi.py
info/: urls.py  views.py
info/templates/: artist_info.html  artist_top_songs.html  playlist.html
music/: forms.py  models.py  spotify_api.py  urls.py  views.py
music/static/: music.css
music/templates/: artist_selection.html  discover.html  genres.html  song_selection.html  spotify_login.html
web/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
web/migrations/: 0001_initial.py  0002_userartistselection.py  0003_remove_album_release_date_playlist_and_more.py  0004_remove_track_duration_ms_remove_track_popularity_and_more.py  0005_alter_playlist_unique_together.py
web/static/: style.css
web/templates/: about_us.html  base.html  home.html  info.html  login.html  music.html  register.html
